# panda_tg_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirments  requirments.txt  run.py  settings.py  utils.py
sticker_bot/: resize_tools.py  run.py  settings.py  utils.py
tg_sticker_bot/: loggings.py  run.py  settings.py  utils.py
